test/preprocessor/invalid/bad-elif.glsl
#if 1
#else
#elif 1
#endif

#elif 2